Menu Layout + styling

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1,7 +1,19 @@
-@import "grid/grid.less";
+@import "colors.less";
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: @mainBGColor;
+}
+
+.clear {
+    clear: both;
+}
+
+@import "fonts.less";
+@import "grid/grid.less";
+@import "menu.less";
