--- a/public/css/menu.less
+++ b/public/css/menu.less
@@ -24,6 +24,7 @@
         top: 100%;
         left: 0px;
         display: none;
+        z-index: 1;
 
         & > .item {
             padding: 10px 20px;
