--- a/public/css/main.less
+++ b/public/css/main.less
@@ -14,6 +14,18 @@ body {
     clear: both;
 }
 
+.captionImage {
+    &.left {
+        float: left;
+    }
+    &.right {
+        float: right;
+    }
+    &.center {
+        margin: 0 auto;
+    }
+}
+
 @import "fonts.less";
 @import "grid/grid.less";
 @import "menu.less";
