--- a/public/css/colors.less
+++ b/public/css/colors.less
@@ -1,7 +1,11 @@
 // main: main.less
 
-@mainBGColor: #fffcdc;
+@mainBGColor: #eee;
 @secondaryBGColor: #334273;
 
 @mainFontColor: #000;
 @secondaryFontColor: #fff;
+
+@footerBGColor: black;
+
+@menuHighlightColor: #eee;
