--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,18 +21,20 @@ body {
 #footer a:hover {
   color: #eee;
 }
+.collage {
+  height: 204px;
+  width: 99999px;
+  overflow: hidden;
+}
+.collage img {
+  margin: 2px;
+  float: left;
+}
 header a {
   text-decoration: none;
 }
 header a:hover {
   color: #eee;
-}
-header::before {
-  height: 213px;
-  width: 100%;
-  display: block;
-  background-image: url('/streunerkatzen-silverstripe/test.png');
-  content: '';
 }
 .clear {
   clear: both;
@@ -57,6 +59,12 @@ h6 {
 }
 p {
   margin-bottom: 7px;
+}
+.container {
+  border: 5px solid red;
+}
+*[class^='size-'] {
+  border: 5px solid blue;
 }
 .container {
   margin: 0 auto;
