just load 10 cats and repeat them if necessary
rename fotocollage to headerconfig
fix has_many

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,7 +23,8 @@ body {
 }
 .collage {
   height: 204px;
-  width: 99999px;
+  width: calc(100% + 204px);
+  /* min-width: 1024px; */
   overflow: hidden;
 }
 .collage img {
