--- a/public/css/main.less
+++ b/public/css/main.less
@@ -29,7 +29,7 @@ body {
 
 .collage {
     height: 204px;
-    width: 99999px;
+    width: 100%;
     & img {
         margin: 2px;
         float: left;
