--- a/public/css/grid/scaffold.less
+++ b/public/css/grid/scaffold.less
@@ -1,5 +1,7 @@
 // main: ../main.less
-
+.wrapper {
+    min-height: ~"calc(100vh - "@footer-height ~")";
+}
 .container {
     margin: 0 auto;
     width: 100%;
