--- a/public/css/grid/variables.less
+++ b/public/css/grid/variables.less
@@ -15,3 +15,6 @@
 @small-width: 48rem;
 @small-width-max: (@medium-width-min - @threshold);
 @small-width-min: @small-width;
+
+@collage-height: 204px;
+@footer-height: 40px;
