--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,14 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+html,
 body {
   background-color: #eee;
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
 }
 #footer {
-  position: fixed;
   bottom: 0;
   width: 100%;
+  height: 40px;
   background-color: black;
   text-transform: uppercase;
 }
@@ -23,8 +25,7 @@ body {
 }
 .collage {
   height: 204px;
-  width: calc(100% + 204px);
-  /* min-width: 1024px; */
+  width: 100%;
   overflow: hidden;
 }
 .collage img {
@@ -60,6 +61,9 @@ h6 {
 }
 p {
   margin-bottom: 7px;
+}
+.wrapper {
+  min-height: calc(100vh -  40px );
 }
 .container {
   margin: 0 auto;
