--- a/public/css/menu.less
+++ b/public/css/menu.less
@@ -41,6 +41,14 @@
     }
 }
 
+@media (min-height: 300px) {
+    header.sticky-nav {
+        position: fixed;
+        width: 100%;
+        top: 0;
+    }
+}
+
 .call-to-action {
     clear: both;
     margin: 5px;
