cleanup, smooth scroll fixes

--- a/public/css/grid/scaffold.less
+++ b/public/css/grid/scaffold.less
@@ -7,6 +7,9 @@
     width: 100%;
     padding: 0 (@grid-spacing / 2);
 
+    &.main {
+        padding-top: 30px;
+    }
     // small width
     @media (min-width: @small-width-min) and (max-width: @small-width-max) {
       	width: @small-width;
