--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,7 @@ body {
   background-color: #eee;
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
+  scroll-behavior: smooth;
 }
 #footer {
   bottom: 0;
@@ -49,6 +50,25 @@ header a:hover {
 }
 .captionImage.center {
   margin: 0 auto;
+}
+.back-to-top {
+  background-image: url(../images/back-to-top-icon.png);
+  background-size: 3em;
+  width: 3em;
+  height: 3em;
+  position: fixed;
+  bottom: calc(1.5em +  40px );
+  right: 1.5em;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .5s, visibility .5s;
+  display: block;
+  cursor: default;
+}
+.back-to-top.revealed {
+  visibility: visible;
+  opacity: 1;
+  cursor: pointer;
 }
 h1,
 h2,
