fallback for css calc

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -69,6 +69,7 @@ header {
     width: 3em;
     height: 3em;
     position: fixed;
+    bottom: 1.5em;
     bottom: ~"calc(1.5em + "@footer-height~")";
     right: 1.5em;
     opacity: 0;
