--- a/public/css/main.css
+++ b/public/css/main.css
@@ -57,6 +57,7 @@ header a:hover {
   width: 3em;
   height: 3em;
   position: fixed;
+  bottom: 1.5em;
   bottom: calc(1.5em +  40px );
   right: 1.5em;
   opacity: 0;
@@ -83,6 +84,7 @@ p {
   margin-bottom: 7px;
 }
 .wrapper {
+  min-height: 80vh;
   min-height: calc(100vh -  40px );
 }
 .container {
