--- a/public/css/grid/scaffold.less
+++ b/public/css/grid/scaffold.less
@@ -9,7 +9,7 @@
     padding: 0 (@grid-spacing / 2);
 
     &.main {
-        padding-top: 30px;
+        padding: 30px 0;
     }
     // small width
     @media (min-width: @small-width-min) and (max-width: @small-width-max) {
