bugfix for missing collage picture

--- a/public/css/grid/scaffold.less
+++ b/public/css/grid/scaffold.less
@@ -2,6 +2,8 @@
 .wrapper {
     min-height: 80vh;
     min-height: ~"calc(100vh - "@footer-height ~")";
+    width: 100%;
+    overflow: hidden;
 }
 .container {
     margin: 0 auto;
