--- a/public/css/search.less
+++ b/public/css/search.less
@@ -8,19 +8,62 @@
         font-weight: bolder;
     }
 }
-
-.search-results {
-    ul {
-        list-style: none;
-        li {
+.cat-about {
+    float: left;
+    width: 50%;
+    // small width
+    @media (min-width: @small-width-min) and (max-width: @small-width-max) {
+        float: none;
+      	width: 100%;
+    }
+}
+.cat-attachments {
+    float: right;
+    width: 50%;
+    // small width
+    @media (min-width: @small-width-min) and (max-width: @small-width-max) {
+        float: none;
+      	width: 100%;
+    }
+}
+.search-results ul {
+    list-style: none;
+    li {
+        display: block;
+        width: 100%;
+        height: 3em;
+        border: 1px solid darken(@mainBGColor, 15);
+        border-collapse: collapse;
+        margin: .2em 0;
+        padding: .5em;
+        min-height: 100px;
+    }
+}
+ul.cat-details {
+    list-style: none;
+    margin: 1em auto;
+    width: 80%;
+    li {
+        margin: 1em 0;
+        display: block;
+        background: inherit;
+        span {
             display: block;
-            width: 100%;
-            height: 3em;
-            border: 1px solid darken(@mainBGColor, 15);
-            border-collapse: collapse;
-            margin: .2em 0;
-            padding: .5em;
-            min-height: 100px;
+            float: left;
+            padding: 0 .1em;
+            &:nth-child(2) {
+                float: right;
+                text-align: right;
+            }
+            max-width: 50%;
+        }
+        // clearfix for height
+        &:after {
+            content: ".";
+            height: 0;
+            visibility: hidden;
+            clear: both;
+            display: block;
         }
     }
 }
