--- a/public/css/main.css
+++ b/public/css/main.css
@@ -867,6 +867,19 @@ p {
   margin: .2em 0;
   padding: .5em;
   min-height: 100px;
+  overflow: hidden;
+}
+.search-results ul li .cat-summary > div {
+  float: left;
+  width: 70%;
+}
+.search-results ul li .cat-summary > div:nth-child(2) {
+  float: right;
+  width: 30%;
+  margin: -0.5em;
+}
+.search-results ul li .cat-summary > div:nth-child(2) > * {
+  float: right;
 }
 ul.cat-details {
   list-style: none;
