--- a/public/css/search.less
+++ b/public/css/search.less
@@ -26,17 +26,21 @@
       	width: 100%;
     }
 }
+.search-results {
+    float: right;
+    width: 70%;
+    padding: 1em 0 1em 1em;
+}
 .search-results ul {
     list-style: none;
+    border: solid darken(@mainBGColor, 15);
+    border-width: 0 1px 1px 0;
     li {
         display: block;
         width: 100%;
-        height: 3em;
-        border: 1px solid darken(@mainBGColor, 15);
-        border-collapse: collapse;
-        margin: .2em 0;
-        padding: .5em;
-        min-height: 100px;
+        border: solid darken(@mainBGColor, 15);
+        border-width: 1px 0 0 1px;
+        padding: 1em;
         overflow: hidden;
         .cat-summary {
             & > div {
@@ -45,7 +49,6 @@
                 &:nth-child(2) {
                     float: right;
                     width: 30%;
-                    margin: -.5em;
                     & > * {
                         float: right;
                     }
@@ -86,30 +89,54 @@ ul.cat-details {
         display: block;
     }
 }
+@filterBorderWidth: 1px;
 .filter-search-form {
-    & input[type='radio'] {
+    float: left;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 0 2em;
+    margin: 1em 0;
+    width: 30%;
+    .filter-group-content-container {
+        overflow: hidden;
+        border: 1px solid @secondaryBGColor;
+    }
+    .filter-group-content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: -1px;
+    }
+    input[type='radio'], input[type='checkbox'] {
         display: none;
-        &+label {
+        .checkbox-and-radio() {
+            border: solid @secondaryBGColor;
+            border-width: 0 @filterBorderWidth @filterBorderWidth 0;
             display: block;
             padding: 1em;
-            float: left;
-            border: 1px solid @secondaryBGColor;
             background-color: white;
-            border-right: none;
-            // skip heading and first radio
-            &:nth-child(3) {
-                border-top-left-radius: 5px;
-                border-bottom-left-radius: 5px;
-            }
-            &:last-child {
-                border-top-right-radius: 5px;
-                border-bottom-right-radius: 5px;
-                border-right: 1px solid @secondaryBGColor;
+            font-size: .7em;
+            text-transform: uppercase;
+            text-align: center;
+            cursor: pointer;
+            flex-grow: 1;
+            &:hover {
+                background-color: @mainBGColor;
             }
         }
-        &:checked+label, &:checked+label:active {
+        &+label {
+            .checkbox-and-radio();
+        }
+        &:checked+label {
             background-color: @secondaryBGColor;
             color: @secondaryFontColor;
+            &:hover {
+                background-color: @secondaryBGColor + 50;
+                color: @mainFontColor;
+            }
+        }
+        &+label:active, &:checked+label:active {
+            background-color: @secondaryBGColor + 100;
         }
     }
     & .filter-group {
