--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,63 @@
+.user-form-container {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.userform .userform-progress > p {
+  display: none;
+}
+.userform .userform-progress .step-button-jump {
+  position: inherit;
+}
+.userform .userform-progress .step-button-wrapper {
+  display: block;
+}
+.userform .userform-progress .step-button-wrapper.current button {
+  color: lightgray;
+  border-color: rgba(0, 0, 0, 0);
+}
+.userform nav {
+  margin: .5em 0;
+}
+.userform button {
+  padding: .5em;
+  min-width: 6em;
+}
+.userform .field {
+  margin: .5em;
+}
+.userform .field.text,
+.userform .field.dropdown,
+.userform .field.listbox,
+.userform .field.textarea,
+.userform .field.checkbox .middleColumn,
+.userform .field.file {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.userform .field.checkbox .middleColumn {
+  flex-direction: row-reverse;
+}
+.userform .field label {
+  font-weight: 100;
+  float: left;
+}
+.userform input,
+.userform select,
+.userform textarea {
+  padding: .4em;
+  margin: .25em 0;
+}
+.userform .step-navigation,
+.userform .userform-progress {
+  margin: .5em;
+}
+.userform .step-navigation .step-buttons,
+.userform .userform-progress .step-buttons {
+  display: flex;
+  justify-content: space-between;
+}
 * {
   margin: 0;
   padding: 0;
@@ -33,6 +93,9 @@ body {
 .collage img {
   margin: 2px;
   float: left;
+}
+header {
+  z-index: 9000;
 }
 header a {
   text-decoration: none;
