--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1,5 +1,5 @@
 @import "colors.less";
-
+@import "form.less";
 * {
     margin: 0;
     padding: 0;
@@ -46,6 +46,7 @@ header {
             color: @menuHighlightColor;
         }
     }
+    z-index: 9000;
 }
 
 .clear {
