--- a/public/css/search.less
+++ b/public/css/search.less
@@ -1,4 +1,5 @@
 // main: main.less
+@import "utils.less";
 .pagination {
     width: 100%;
     margin: 0 auto;
@@ -76,17 +77,7 @@ ul.cat-details {
             }
             max-width: 50%;
         }
-        // clearfix for height
         .heightClearfix();
-    }
-}
-.heightClearfix() {
-    &:after {
-        content: ".";
-        height: 0;
-        visibility: hidden;
-        clear: both;
-        display: block;
     }
 }
 @filterBorderWidth: 1px;
