--- a/public/css/form.less
+++ b/public/css/form.less
@@ -34,6 +34,11 @@
             justify-content: space-between;
             align-items: baseline;
         }
+        &.text, &.dropdown, &.listbox, &.textarea, &.file {
+            input, select, textarea {
+                width: 14em;
+            }
+        }
         // input[type="file"].file {
         //     display: none;
         // }
