--- a/public/css/search.less
+++ b/public/css/search.less
@@ -96,6 +96,7 @@ ul.cat-details {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        align-items: baseline;
         margin: -1px;
     }
     input[type='radio'], input[type='checkbox'] {
