--- a/public/css/form.less
+++ b/public/css/form.less
@@ -30,6 +30,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+#search-agent {
+    cursor: pointer;
+}
+.error.message{
+  position:absolute;
+  border: 1px solid red;
+  padding: .5em;
+  background-color: white;
+  border-radius: .15em;
+  margin: .4em;
+  font-size: 9pt;
+}
 .userform {
     .userform-progress {
         & > p {
