--- a/public/css/main.css
+++ b/public/css/main.css
@@ -118,6 +118,28 @@ textarea {
   padding: 0.4em;
   margin: 0.25em 0;
 }
+article {
+  margin: 5em 0;
+}
+article h5 {
+  text-align: center;
+  color: #435696;
+  text-transform: uppercase;
+  font-family: monospace;
+  letter-spacing: 0.1em;
+}
+article h2 {
+  text-align: center;
+}
+article .head {
+  text-align: center;
+  font-size: 14px;
+  margin: 1.25em;
+}
+article .read-more {
+  margin: 1em 0;
+  font-size: 14px;
+}
 * {
   margin: 0;
   padding: 0;
