bloglist filtered by category

--- a/public/css/blog.less
+++ b/public/css/blog.less
@@ -22,3 +22,7 @@ article {
         font-size: 14px;
     }
 }
+.article-category-header {
+    text-align: center;
+    color: darken(@secondaryBGColor, 10);
+}
