--- a/public/css/blog.less
+++ b/public/css/blog.less
@@ -26,3 +26,11 @@ article {
     text-align: center;
     color: darken(@secondaryBGColor, 10);
 }
+.cat-shortcode {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-transform: uppercase;
+    font-family: cursive;
+}
