--- a/public/css/main.css
+++ b/public/css/main.css
@@ -144,6 +144,14 @@ article .read-more {
   text-align: center;
   color: #232e50;
 }
+.cat-shortcode {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-transform: uppercase;
+  font-family: cursive;
+}
 * {
   margin: 0;
   padding: 0;
