--- a/public/css/main.css
+++ b/public/css/main.css
@@ -120,6 +120,7 @@ textarea {
 }
 .blog-article {
   display: flex;
+  justify-content: space-around;
   margin: 5em 0;
 }
 .blog-article.single {
@@ -145,6 +146,9 @@ textarea {
   font-size: 14px;
   display: block;
 }
+.blog-article .text {
+  flex-basis: 80%;
+}
 .article-category-header {
   text-align: center;
   color: #232e50;
@@ -156,6 +160,11 @@ textarea {
   align-items: center;
   text-transform: uppercase;
   font-family: cursive;
+}
+.load-more-btn {
+  text-align: center;
+  width: 100%;
+  display: block;
 }
 * {
   margin: 0;
