--- a/public/css/blog.less
+++ b/public/css/blog.less
@@ -43,6 +43,7 @@
     align-items: center;
     text-transform: uppercase;
     font-family: cursive;
+    margin: 2em 0;
 }
 .load-more-btn {
     text-align: center;
