--- a/public/css/main.css
+++ b/public/css/main.css
@@ -236,6 +236,7 @@ textarea {
   align-items: center;
   text-transform: uppercase;
   font-family: cursive;
+  margin: 2em 0;
 }
 .load-more-btn {
   text-align: center;
@@ -270,6 +271,11 @@ body {
 }
 .hidden {
   display: none;
+  visibility: hidden;
+  opacity: 0;
+}
+.block {
+  display: block;
 }
 .collage {
   height: 204px;
@@ -368,9 +374,12 @@ header a:hover {
   opacity: 1;
   cursor: pointer;
 }
-.hidden {
-  visibility: hidden;
-  opacity: 0;
+.noti-controls {
+  margin: 1em 0;
+  list-style-type: none;
+}
+.noti-controls li {
+  margin: 0.5em 0;
 }
 h1,
 h2,
