--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,6 +26,75 @@
   clear: both;
   display: block;
 }
+.chosen ul {
+  list-style: none;
+}
+.chosen .chosen-choices {
+  display: flex;
+  justify-content: space-between;
+  width: 11.65em;
+  padding: 0.2em;
+  margin: 0.24em 0;
+  flex-wrap: wrap;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  background-image: linear-gradient(#eee 1%, #fff 15%);
+  cursor: text;
+}
+.chosen .chosen-choices li {
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.chosen .chosen-choices li:last-child {
+  width: 25px;
+}
+.chosen .chosen-choices li:not(:last-child) {
+  font-size: 0.7em;
+  height: 2em;
+  margin: 0.25em;
+  border: 1px solid lightgray;
+  border-radius: 3px;
+  background-color: #e6e6e6;
+  padding: 0 0.3em;
+}
+.chosen .chosen-choices li:not(:last-child) a {
+  display: inline-block;
+}
+.chosen .chosen-choices li:not(:last-child) a:hover {
+  border-radius: 3px;
+  text-decoration: none;
+  background-color: white;
+}
+.chosen .chosen-choices input {
+  margin: 0;
+  outline: 0;
+  border: 0 !important;
+  background: transparent !important;
+  box-shadow: none;
+  border-radius: 0;
+  width: 100% !important;
+  font-size: 10pt;
+  overflow: hidden;
+}
+.chosen .chosen-drop ul {
+  border: 1px solid lightgray;
+  background-color: #e6e6e6;
+}
+.chosen .chosen-drop ul li {
+  margin: 0;
+  padding: 0.35em;
+  background-color: #cccccc;
+}
+.chosen .chosen-drop ul li.selectable {
+  background-color: #e6e6e6;
+}
+.chosen .chosen-drop ul li.selectable:hover {
+  cursor: pointer;
+  background-color: white;
+}
 .user-form-container {
   max-width: 500px;
   margin-left: auto;
