--- a/public/css/form.less
+++ b/public/css/form.less
@@ -4,6 +4,13 @@
     padding: .5em;
     min-width: 6em;
 }
+.demo-div {
+    position: fixed;
+}
+.demo-img {
+    max-width: 200px;
+    max-height: 200px;
+}
 #Form_CatSearchForm {
     display: flex;
     align-items: baseline;
