--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,10 @@
+.demo-div {
+  position: fixed;
+}
+.demo-img {
+  max-width: 200px;
+  max-height: 200px;
+}
 #Form_CatSearchForm {
   display: flex;
   align-items: baseline;
